# CGProject

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Flame.h  Loader.hpp  ObjLoader.hpp  ParticleSystem.h  README.md  Window.cpp  Window.h  copy.cpp  glad.c  main  main.cpp
dependencies/include/assimp/: defs.h
dependencies/include/contrib/draco/src/draco/io/: gltf_encoder_test.cc
dependencies/include/contrib/draco/src/draco/scene/: scene_test.cc  scene_utils_test.cc
dependencies/include/contrib/zlib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependencies/include/glad/: glad.h
entity/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Light.h  Loader.cpp  Loader.h  MY_Model.cpp  MY_Model.h  Player.cpp  Player.h  Terrain.cpp  Terrain.h
image/: fireball01-frame028.tga
image/planet/: arctic_01_diffuse.dds  arctic_01_specular.dds  continental_02_normal.dds  continental_02_specular.dds  molten_02_diffuse.dds  molten_02_normal.dds  molten_02_specular.dds  tundra_03_diffuse.dds  tundra_03_normal.dds  tundra_03_specular.dds
missile/: missile_01_diffuse.dds  missile_01_specular.dds
newshaders/: disp.fs  plane.fs  planet.fs  planet.vs
particles/: ParticleSystem.cpp  particle.cpp  particle.h  particleSystem.h
plane/: ship_03_diffuse.dds  ship_03_normal.dds  ship_03_specular.dds
renders/: EntityRenderer.cpp  EntityRenderer.h  FrameBuffer.cpp  FrameBuffer.h  ParticleManager.cpp  ParticleManager.h  RenderManager.cpp  RenderManager.h  ShadowMap.cpp  ShadowMap.h  SkyboxRenderer.cpp  SkyboxRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h  WaterRenderer.cpp  WaterRenderer.h  particleRenderer.cpp  particleRenderer.h
res/base/: base.mtl
res/car/: Hilux.mtl
res/engine/: Engine.mtl
res/highway/: TheBridge.mtl
res/relic/: Building01.dae  Building01.fbx  Building01.mtl  Purchase.txt
res/rock/: rock.mtl
res/tree/: tree.mtl
res/trunk/: trunk.mtl
shaders/: AABBShader.cpp  AABBShader.h  EntityShader.cpp  EntityShader.h  ShaderProgram.cpp  TerrainShader.h  WaterShader.h  bezier.fs  car.vs  earth.fs  earth.vs  earth2.fs  earth2.vs  earth3.fs  earth3.vs  entity.frag  moon.fs  moon.gs  moon.vs  nano.fs  particle.frag  particle.vert  particleShader.cpp  particleShader.h  skybox.vs  space.fs  space.vs  terrain.frag  water.frag
starbase/: diffuse.dds  spyorb.mtl  starbase_08_diffuse.dds  starbase_08_normal.dds  starbase_08_specular.dds
tools/: Gshader.h  Texture.h  camera.h  mesh.h  model.h  shader.h
truck/: TruckM.mtl
